--- a/client/components/navbar/navbar.jade
+++ b/client/components/navbar/navbar.jade
@@ -1,34 +1,25 @@
-div.navbar.navbar-default.navbar-static-top(ng-controller='NavbarController')
-  div.container
-    div.navbar-header
-      button.navbar-toggle(type='button', ng-click='nav.isCollapsed = !nav.isCollapsed')
-        span.sr-only Toggle navigation
-        span.icon-bar
-        span.icon-bar
-        span.icon-bar
-      a.navbar-brand(href='/') kiwi-school
+md-toolbar(ng-controller='NavbarController')
+  div.md-toolbar-tools
 
-    div#navbar-main.navbar-collapse.collapse(uib-collapse='nav.isCollapsed')
-      ul.nav.navbar-nav
-        li(ng-repeat='item in nav.menu', ui-sref-active='active')
-          a(ui-sref='{{item.state}}') {{item.title}}
+    h2
+      span 
+        a(href='/') KiwiSchool
 
-        li(ng-show='nav.isAdmin()', ui-sref-active='active')
-          a(ui-sref='admin') Admin
+    md-button.md-icon-button(ng-repeat='item in nav.menu', ui-sref-active='active' ui-sref='{{item.state}}') 
+      md-icons.material-icons {{item.icon}}
 
-      ul.nav.navbar-nav.navbar-right
-        li(ng-hide='nav.isLoggedIn()', ui-sref-active='active')
-          a(ui-sref='signup') Sign up
+    md-button(ng-show='nav.isAdmin()', ui-sref-active='active' ui-sref='admin')
+      | Admin
 
-        li(ng-hide='nav.isLoggedIn()', ui-sref-active='active')
-          a(ui-sref='login') Login
+    span(flex)
+    
+    md-button(ng-hide='nav.isLoggedIn()', ui-sref-active='active' ui-sref='signup')
+      | Sign up
 
-        li(ng-show='nav.isLoggedIn()')
-          p.navbar-text Hello {{ nav.getCurrentUser().name }}
+    md-button(ng-hide='nav.isLoggedIn()', ui-sref-active='active' ui-sref='login')
+      | Login
 
-        li(ng-show='nav.isLoggedIn()', ui-sref-active='active')
-          a(ui-sref='settings')
-            span.glyphicon.glyphicon-cog
+    md-button.md-icon-button(ng-show='nav.isLoggedIn()', ui-sref-active='active' ui-sref='settings')
+        md-icons.material-icons settings
 
-        li(ng-show='nav.isLoggedIn()')
-          a(ui-sref='logout') Logout
+    md-button(ng-show='nav.isLoggedIn()' ui-sref='logout') Logout
