--- a/client/app/account/login/login.jade
+++ b/client/app/account/login/login.jade
@@ -1,45 +1,43 @@
-.container
-  .row
-    .col-sm-12
-      h1 Login
+md-content(layout-padding)
+  h1.md-display-3(flex='grow') Login
+  div(layout='column' layout-gt-sm='row' layout-padding)
+      
+    form.form(name='form', ng-submit='vm.login(form)', novalidate='' flex-gt-sm='nogrow')
+      md-input-container.md-block
+        label Email
+        input(type='email', name='email', ng-model='vm.user.email' required)
+        div(ng-messages='form.email.$error')
+          div(ng-message='required') This is required.
+      md-input-container.md-block
+        label Password
+        input(type='password', name='password', ng-model='vm.user.password' required)
+        div(ng-messages='form.password.$error')
+          div(ng-message='required') This is required.
+
+      div(layout='row')
+        md-button.md-primary(type='submit')
+          | Login
+          
+        md-button(ui-sref='signup')
+          | Register
+          
+        oauth-buttons(classes='btn-block')
+        
+    div(flex-gt-sm='10')
+        
+    div(flex-gt-sm='grow')
       p
         | Accounts are reset on server restart from
-        code server/config/seed.js
-        | . Default account is
-        code test@example.com
+        code  server/config/seed.js
+        | .
+      p
+        | Default account is
+        code  test@example.com
         | /
         code test
       p
         | Admin account is
-        code admin@example.com
+        code  admin@example.com
         | /
         code admin
-
-    .col-sm-12
-      form.form(name='form', ng-submit='vm.login(form)', novalidate='')
-        .form-group
-          label Email
-          input.form-control(type='email', name='email', ng-model='vm.user.email')
-        .form-group
-          label Password
-          input.form-control(type='password', name='password', ng-model='vm.user.password')
-
-        .form-group.has-error
-          p.help-block(ng-show='form.email.$error.required && form.password.$error.required && vm.submitted')
-            | Please enter your email and password.
-          p.help-block {{ vm.errors.other }}
-
-        div
-          button.btn.btn-inverse.btn-lg.btn-login(type='submit')
-            | Login
-          = ' '
-          a.btn.btn-default.btn-lg.btn-register(ui-sref='signup')
-            | Register
-
-        hr
-
-        .row
-          .col-sm-4.col-md-3
-            oauth-buttons(classes='btn-block')
-
-  hr
+        
