--- a/client/components/oauth-buttons/oauth-buttons.jade
+++ b/client/components/oauth-buttons/oauth-buttons.jade
@@ -1,6 +1,2 @@
-a.btn.btn-google(ng-class='classes'
-  ng-click='OauthButtons.loginOauth("google")')
-  i.fa.fa-google-plus
+md-button(ng-click='OauthButtons.loginOauth("google")')
   |  Connect with Google+
-
-
